<resources>
    <string name="app_name">GridLayout</string>
    <string name="c11">Celda 1-1</string>
    <string name="c12">Celda 1-2</string>
    <string name="c13">Celda 1-3</string>
    <string name="c21">Celda 2-1</string>
    <string name="c22">Celda 2-2</string>
    <string name="c23">Celda 2-3</string>
    <string name="c31">Celda 3-1</string>
    <string name="c32">Celda 3-2</string>
    <string name="c33">Celda 3-3</string>
</resources>
