<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javiersl.gridlayout.MainActivity"
    android:rowCount="3"
    android:columnCount="3"
    android:orientation="horizontal"
    android:useDefaultMargins="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c11"
        android:textAppearance="?android:textAppearanceLarge"
        android:background="@color/color11"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c12"
        android:textAppearance="?android:textAppearanceLarge"
        android:background="@color/color12"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c13"
        android:textAppearance="?android:textAppearanceLarge"
        android:background="@color/color13"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c21"
        android:textAppearance="?android:textAppearanceLarge"
        android:background="@color/color21"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c22"
        android:textAppearance="?android:textAppearanceLarge"
        android:background="@color/color22"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c23"
        android:textAppearance="?android:textAppearanceLarge"
        android:background="@color/color23"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c31"
        android:textAppearance="?android:textAppearanceLarge"
        android:background="@color/color31"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/c32"
       android:textAppearance="?android:textAppearanceLarge"
       android:background="@color/color32"
       android:textColor="@android:color/white"
       android:padding="10dp"/>

    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/c33"
       android:textAppearance="?android:textAppearanceLarge"
       android:background="@color/color33"
       android:textColor="@android:color/white"
       android:padding="10dp"/>
</GridLayout>
